docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/Callout_Data_Item__c.object-meta.xml
<CustomObject>
    <description>To store all the records retrieved from the external callout and acts as a child object for the Callout Data object.</description>
    <label>Callout Data Item</label>
    <nameField>
        <displayFormat>CDI-{0000}</displayFormat>
        <label>Callout Data Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Data Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>