docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/ACH_Id__c.field-meta.xml
<CustomField>
    <fullName>ACH_Id__c</fullName>
    <description>To store the ACH Id related to the payment details</description>
    <label>ACH Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>