docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <description>Stores the address1 from SAS client address</description>
    <label>AddressLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>