docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>Stores the address2 from SAS client address</description>
    <label>AddressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>