docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <description>Stores the address3 from SAS client address</description>
    <label>AddressLine3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>