docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Balance_In__c.field-meta.xml
<CustomField>
    <fullName>Balance_In__c</fullName>
    <description>This is all the cleared money paid into the account.</description>
    <label>Balance In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>