docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Balance_Out__c.field-meta.xml
<CustomField>
    <fullName>Balance_Out__c</fullName>
    <description>This is all the money that’s been paid out including SAS fees and settlements</description>
    <label>Balance Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>