docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Callout_Data__c.field-meta.xml
<CustomField>
    <fullName>Callout_Data__c</fullName>
    <description>Stores the parent record Id</description>
    <label>Callout Data</label>
    <referenceTo>Callout_Data__c</referenceTo>
    <relationshipLabel>Callout Data Item</relationshipLabel>
    <relationshipName>Callout_Data_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>