docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Stores the city from SAS client address</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>