docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Stores the clients_id from SAS customer informations</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>