docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Stores the clients_display name from the customer info in SAS external callout</description>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>