docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Stores the Company name from SAS Customer information.</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>