docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>To store the country name from the customer address field</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>