docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description>To store the customer status from the customer info from external callout</description>
    <label>Customer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>