docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Customer_Status_Enum_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Enum_Id__c</fullName>
    <description>To store the customerstatus_enums_id from SAS customer info</description>
    <label>Customer Status Enum Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>