docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>To store the Email from external customer info</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>