docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>To store the external Id from the callout</description>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>