docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>To store the customer first name from the external callout</description>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>