docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>Stores the client display name from SAS</description>
    <label>FullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>