docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>To store the invoice number (lead number) from the SAS callout.</description>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>