docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/IsPortalActive__c.field-meta.xml
<CustomField>
    <fullName>IsPortalActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store the isportalactive boolean from SAS customer info</description>
    <label>IsPortalActive</label>
    <type>Checkbox</type>
</CustomField>