docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>To store the customer last name from external callout</description>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>