docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>To store the payment method received from the external callout</description>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>