docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>To store the payment status from the callout</description>
    <label>Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>