docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <description>To store the phone1 from external callout customer info</description>
    <label>Phone1</label>
    <type>Phone</type>
</CustomField>