docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <description>To store the phone2 from external callout customer info</description>
    <label>Phone2</label>
    <type>Phone</type>
</CustomField>