docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Phone3__c.field-meta.xml
<CustomField>
    <fullName>Phone3__c</fullName>
    <description>To store the phone3 from external callout customer info</description>
    <label>Phone3</label>
    <type>Phone</type>
</CustomField>