docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>To store the postal/zip code in customer info from external callout</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>