docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>To capture the Salesforce record Id</description>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>