docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/RowNumber__c.field-meta.xml
<CustomField>
    <fullName>RowNumber__c</fullName>
    <description>To store the row number from the customer info SAS callout</description>
    <label>RowNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>