docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>To store the SSN from the external callout</description>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>