docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>To store the state address field from external callout customer info</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>