docs/sf-export/sfdx-raw/objects/Callout_Data_Item__c/fields/TotalFailed__c.field-meta.xml
<CustomField>
    <fullName>TotalFailed__c</fullName>
    <description>To store the totalfailed from the customer info SAS callout</description>
    <label>TotalFailed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>